--- a/src/App.css
+++ b/src/App.css
@@ -1,198 +1,151 @@
-html, body, .root {
-  height: 100%;
+/* Font Reference
+
+font-family: 'Lato', sans-serif;
+font-family: 'Oswald', sans-serif;
+
+*/
+
+html, body {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  background-color: white;
+  font-family: 'Lato', sans-serif;
 }
 
 body {
-  line-height: 1.5;
+  font-size: 16px;
+  line-height: 24px;
 }
 
-body, .app {
-  background: white;
+#app {
+  position: relative;
+  padding: 25px 15px;
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
-/* main page */
-
-.list-books-title {
-  padding: 10px 0;
-  background: #2e7c31;
-  text-align: center;
+.root .title-cont {
+  width: 100%;
+  max-width: 400px;
+  padding: 25px 10px;
+  border: 1px solid dimgray;
+  margin-bottom: 25px;
+  background: red;
+  box-shadow: 3px 6px rgba(0,0,0,0.5);
 }
 
-.list-books-title h1 {
-  font-weight: 400;
-  margin: 0;
-  color: white;
+.root .title-cont h1 {
+  display: flex;
+  flex-direction: column;
+  font-family: 'Oswald', sans-serif;
+  color: palegoldenrod;
+  font-size: 44px;
+  line-height: 44px;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  text-shadow: 2px 2px 2px black;
 }
 
-.list-books-content {
-  padding: 0 0 80px;
-  flex: 1;
+.root .title-cont h1 span:first-of-type {
+  color: silver;
 }
 
-.bookshelf {
-  padding: 0 10px 20px;
-}
-
-@media (min-width: 600px) {
-  .bookshelf {
-    padding: 0 20px 40px;
+@media (min-width: 1024px) {
+  .root .title-cont h1 {
+    font-size: 66px;
+    line-height: 80px;
   }
 }
 
-.bookshelf-title {
-  border-bottom: 1px solid #dedede;
-}
-
-.bookshelf-books {
-  text-align: center;
-}
-
-.open-search {
-  position: fixed;
-  right: 25px;
-  bottom: 25px;
-}
-
-.open-search button {
-  display: block;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  background: #2e7d32;
-  background-image: url('./icons/add.svg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 28px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  font-size: 0;
-  outline: 0;
-}
-
-.open-search button:hover {
-  background-color: rgb(0, 102, 0);
-}
-
-
-/* search page */
-
-.search-books-bar {
-  position: fixed;
-  width: 100%;
-  top: 0;
-  left: 0;
-  z-index: 5;
-  display: flex;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 0 6px rgba(0,0,0,0.23);
-}
-
-.search-books-input-wrapper {
-  flex: 1;
-  background: #e9e;
-}
-
-.search-books-bar input {
-  width: 100%;
-  padding: 15px 10px;
-  font-size: 1.25em;
-  border: none;
-  outline: none;
-}
-
-.close-search {
-  display: block;
-  top: 20px;
-  left: 15px;
-  width: 50px;
-  height: 53px;
-  background-image: url('./icons/arrow-back.svg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 28px;
-  font-size: 0;
-  border: none;
-  outline: none;
-}
-
-button:active {
-  border: red;
-  outline: none;
-}
-
-.search-books-results {
-  padding: 80px 10px 20px;
-}
-
-/* books grid */
-
-.books-grid {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.books-grid li {
-  padding: 10px 15px;
-  text-align: left;
-}
-
-.book {
-  width: 140px;
-}
-
-.book-title,
-.book-authors {
-  font-size: 0.8em;
-}
-
-.book-title {
-  margin-top: 10px;
-}
-
-.book-authors {
-  color: #999;
-}
-
-.book-top {
+.bookcase {
   position: relative;
-  height: 200px;
-  display: flex;
-  align-items: flex-end;
-}
-
-.book-shelf-changer {
-  position: absolute;
-  right: 0;
-  bottom: -10px;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background: #60ac5d;
-  background-image: url('./icons/arrow-drop-down.svg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 20px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-}
-
-.book-shelf-changer select {
   width: 100%;
-  height: 100%;
-  opacity: 0;
-  cursor: pointer;
+  max-width: 1330px;
+  margin: 0 auto 50px 0;
 }
 
-/* book cover */
-
-.book-cover {
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  background: #eee;
+.book-shelf {
+  margin: 50px 0;
+  padding-bottom: 25px;
 }
 
-.book-cover-title {
-  padding: 20px 10px 0;
-  text-align: center;
-  font-size: 0.8em;
+.book-shelf h2 {
+  display: inline-block;
+  position: relative;
+  font-family: "Lato", sans-serif;
+  color: red;
+  font-size: 44px;
+  line-height: 56px;
+  text-transform: uppercase;
+  margin: 10px 0 40px;
+  padding-bottom: 20px;
+}
+
+.book-shelf h2::after {
+  content: "";
+  position: absolute;
+  bottom: -15px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: red;
+}
+
+.books-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.book-item {
+  position: relative;
+  display: flex;
+  width: 100%;
+  max-width: 660px;
+  padding: 15px 10px 30px;
+  background-color: whitesmoke;
+  box-shadow: 2px 3px 2px black;
+  border: 1px solid dimgray;
+  border-radius: 3px;
+  margin-bottom: 45px;
+}
+
+.book-item .img-cont img {
+  display: block;
+  border: 1px ridge silver;
+  border-radius: 12px;
+}
+
+.book-item .contents {
+  padding: 0 10px;
+}
+
+.book-item .book-title {
+  font-family: "Oswald" sans-serif;
+  color: darkslategray;
+  font-size: 26px;
+  line-height: 30px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  margin-bottom: 15px;
+}
+
+.book-item .author {
+  font-size: 22px;
+  line-height: 26px;
+}
+
+.book-item .author span {
+  font-family: "Oswald", sans-serif;
+  color: red;
+}
+
+.btn {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  padding: 15px;
+  text-decoration: none;
 }
